<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewModuleCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_code" />

    <TextView
        android:id="@+id/textViewModuleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_name" />

    <TextView
        android:id="@+id/textViewAcademicYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/academic_year" />

    <TextView
        android:id="@+id/textViewSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester" />

    <TextView
        android:id="@+id/textViewModuleCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_credit" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue" />
</LinearLayout>